--- a/src/components/AddContactForm/AddContactForm.css
+++ b/src/components/AddContactForm/AddContactForm.css
@@ -6,7 +6,6 @@
   line-height: 150%;
   border-radius: 10px;
   text-align: center;
-  margin: auto;
   background: #3b3a50;
   color: #eeebd9;
   grid-column-start: 6;
@@ -14,3 +13,14 @@
   box-shadow:  0.5em 0.5em 0.2em rgb(48, 39, 39);
 }
 
+#comments {
+  width: 15em;
+  border-radius: 10px;
+}
+
+@media screen and (max-width: 960px) {
+  .AddContactForm {
+    grid-column-start: 1;
+    grid-column-end: 9;
+  }
+}
