--- a/src/components/SavedJob/SavedJob.css
+++ b/src/components/SavedJob/SavedJob.css
@@ -1,90 +1,260 @@
-.job-box {
-  width: 80%;
-  border: 1px black solid;
-  min-width: 300px;
-  padding: 0.5em;
-  border-radius: 10px;
-  margin: 0.75em auto;
-  background: #3b3a50;
-  color: #eeebd9;
-  box-shadow:  0.5em 0.5em 0.2em rgb(48, 39, 39); 
+@media screen and (min-width: 960px) {
+  .job-box {
+    width: 80%;
+    border: 1px black solid;
+    min-width: 300px;
+    padding: 0.5em;
+    border-radius: 10px;
+    margin: 0.75em auto;
+    background: #3b3a50;
+    color: #eeebd9;
+    box-shadow:  0.5em 0.5em 0.2em rgb(48, 39, 39); 
+  }
+  
+  .edit-job-form {
+    width: 80%;
+    border: 1px black solid;
+    min-width: 300px;
+    margin: 0 auto;
+    padding: 5%;
+    line-height: 150%;
+    border-radius: 10px;
+    text-align: center;
+    margin: auto;
+    background: #3b3a50;
+    color: #eeebd9;
+    box-shadow:  0.5em 0.5em 0.2em rgb(48, 39, 39);
+  }
+  
+  .job-status{
+    border: 1px solid black;
+    padding: 5px;
+  }
+  
+  .job-box button{
+    margin: 15px;
+  }
+  
+  .job-description {
+    width: 80%;
+    margin: 0.5em auto;
+    line-height: 168%;
+    height: 200px;
+    overflow-y: auto;
+  }
+  
+  .job-url {
+    width: 80%;
+    margin: 0.5em auto;
+  }
+  
+  .job-description > p {
+    text-align: left;
+  }
+  
+  .job-description > ul {
+    text-align: left;
+    margin-bottom: 1em;
+  }
+  
+  .green{
+    background: green;
+  }
+  
+  .yellow{
+    background: rgb(224, 193, 13)
+  }
+  
+  .red{
+    background: rgb(255, 78, 78);
+  }
+  
+  .edit-job-form label, input{
+    display: inline block;
+    margin: 5px;
+  }
+  
+  .edit-job-form button{
+    margin: 15px;
+  }
+  
+  
+  .edit-job-form textarea{
+    font-family: sans-serif;
+  }
 }
 
-.edit-job-form {
-  width: 80%;
-  border: 1px black solid;
-  min-width: 300px;
-  margin: 0 auto;
-  padding: 5%;
-  line-height: 150%;
-  border-radius: 10px;
-  text-align: center;
-  margin: auto;
-  background: #3b3a50;
-  color: #eeebd9;
-  box-shadow:  0.5em 0.5em 0.2em rgb(48, 39, 39);
+@media screen and (max-width: 960px) {
+  .job-box {
+    width: 80%;
+    border: 1px black solid;
+    min-width: 300px;
+    padding: 0.5em;
+    border-radius: 10px;
+    margin: 0.75em auto;
+    background: #3b3a50;
+    color: #eeebd9;
+    box-shadow:  0.5em 0.5em 0.2em rgb(48, 39, 39); 
+  }
+  
+  .edit-job-form {
+    width: 80%;
+    border: 1px black solid;
+    min-width: 100%;
+    margin: 0 auto;
+    padding: 5%;
+    line-height: 150%;
+    border-radius: 10px;
+    text-align: center;
+    margin: auto;
+    background: #3b3a50;
+    color: #eeebd9;
+    box-shadow:  0.5em 0.5em 0.2em rgb(48, 39, 39);
+  }
+  
+  .job-status{
+    border: 1px solid black;
+    padding: 5px;
+  }
+  
+  .job-box button{
+    margin: 15px;
+  }
+  
+  .job-description {
+    width: 80%;
+    margin: 0.5em auto;
+    line-height: 168%;
+    height: 200px;
+    overflow-y: auto;
+  }
+  
+  .job-url {
+    width: 80%;
+    margin: 0.5em auto;
+  }
+  
+  .job-description > p {
+    text-align: left;
+  }
+  
+  .job-description > ul {
+    text-align: left;
+    margin-bottom: 1em;
+  }
+  
+  .green{
+    background: green;
+  }
+  
+  .yellow{
+    background: rgb(224, 193, 13)
+  }
+  
+  .red{
+    background: rgb(255, 78, 78);
+  }
+  
+  .edit-job-form label, input{
+    display: inline block;
+    margin: 5px;
+  }
+  
+  .edit-job-form button{
+    margin: 15px;
+  }
+  
+  
+  .edit-job-form textarea{
+    font-family: sans-serif;
+  }
 }
 
-.job-status{
-  border: 1px solid black;
-  padding: 5px;
+@media screen and (max-width: 480px) {
+  .job-box {
+    width: 80%;
+    border: 1px black solid;
+    min-width: 300px;
+    padding: 0.5em;
+    border-radius: 10px;
+    margin: 0.75em auto;
+    background: #3b3a50;
+    color: #eeebd9;
+    box-shadow:  0.5em 0.5em 0.2em rgb(48, 39, 39); 
+  }
+  
+  .edit-job-form {
+    width: 80%;
+    border: 1px black solid;
+    min-width: 300px;
+    margin: 0 auto;
+    padding: 5%;
+    line-height: 150%;
+    border-radius: 10px;
+    text-align: center;
+    margin: auto;
+    background: #3b3a50;
+    color: #eeebd9;
+    box-shadow:  0.5em 0.5em 0.2em rgb(48, 39, 39);
+  }
+  
+  .job-status{
+    border: 1px solid black;
+    padding: 5px;
+  }
+  
+  .job-box button{
+    margin: 15px;
+  }
+  
+  .job-description {
+    width: 80%;
+    margin: 0.5em auto;
+    line-height: 168%;
+    height: 200px;
+    overflow-y: auto;
+  }
+  
+  .job-url {
+    width: 80%;
+    margin: 0.5em auto;
+  }
+  
+  .job-description > p {
+    text-align: left;
+  }
+  
+  .job-description > ul {
+    text-align: left;
+    margin-bottom: 1em;
+  }
+  
+  .green{
+    background: green;
+  }
+  
+  .yellow{
+    background: rgb(224, 193, 13)
+  }
+  
+  .red{
+    background: rgb(255, 78, 78);
+  }
+  
+  .edit-job-form label, input{
+    display: inline block;
+    margin: 5px;
+  }
+  
+  .edit-job-form button{
+    margin: 15px;
+  }
+  
+  .edit-job-form textarea{
+    font-family: sans-serif;
+  }
 }
 
-.job-box button{
-  margin: 15px;
-}
 
-.job-description {
-  width: 80%;
-  margin: 0.5em auto;
-  line-height: 168%;
-  height: 200px;
-  overflow-y: auto;
-}
-
-.job-url {
-  width: 80%;
-  margin: 0.5em auto;
-}
-
-.job-description > p {
-  text-align: left;
-}
-
-.job-description > ul {
-  text-align: left;
-  margin-bottom: 1em;
-}
-
-.green{
-  background: green;
-}
-
-.yellow{
-  background: rgb(224, 193, 13)
-}
-
-.red{
-  background: rgb(255, 78, 78);
-}
-
-.edit-job-form label, input{
-  display: inline block;
-  margin: 5px;
-}
-
-.edit-job-form button{
-  margin: 15px;
-}
-
-.edit-job-form{
-  margin: 10px;
-  border: 1px solid black;
-  padding: 15px;
-}
-
-.edit-job-form textarea{
-  font-family: sans-serif;
-}
 
 
