--- a/src/routes/LoginRoute/LoginRoute.css
+++ b/src/routes/LoginRoute/LoginRoute.css
@@ -1,7 +1,7 @@
 .LoginRoute {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
-  grid-gap: 20px;
+  grid-gap: 1em;
 }
 .login-image {
   position: relative;
@@ -23,4 +23,11 @@
   grid-column-end: 7;
   text-align: center;
   color: #eeebd9;
+}
+
+@media screen and (max-width: 480px) {
+  .new-user {
+    grid-column-start: 1;
+    grid-column-end: 13;
+  }
 }
