--- a/src/components/CompanySummary/CompanySummary.css
+++ b/src/components/CompanySummary/CompanySummary.css
@@ -1,6 +1,6 @@
 .saved-company-list {
     position: relative;
-    grid-column-start: 3;
+    grid-column-start: 4;
     grid-column-end: 9;
     height: 100%;
     max-height: 450px;
@@ -17,4 +17,11 @@
     width: 50%;
     margin-left: 50%;
     margin-top: 0.5em;
+}
+
+@media screen and (max-width: 960px) {
+    .saved-company-list {
+        grid-column-start: 1;
+        grid-column-end: 9;
+    }
 }
