--- a/src/components/SummaryContainer/SummaryContainer.css
+++ b/src/components/SummaryContainer/SummaryContainer.css
@@ -1,49 +1,138 @@
-.SummaryContainer {
-  grid-column-start: 3;
-  grid-column-end: 9;
-  border: 1px solid black;
-  border-radius: 10px;
-  height: 350px;
-  position: relative;
-  background: #3C3230;
-  color: #eeebd9;
-}
-
-.carousel__next-button {
-  border-radius: 10px;
-  position: absolute;
-  right: -20px;
-  top: 50%;
-  height: 2em;
-  background: #3C824E;
-}
-
-.carousel__back-button {
-  border-radius: 10px;
-  position: absolute;
-  left: -20px;
-  top: 50%;
-  height: 2em;
-  background: #3C824E;
-}
-
-.carousel__back-button:hover, .carousel__next-button:hover {
-  transition: 0.5s;
-  transform: scale(1.3);
-  background: #3C824E;
-  box-shadow: 0.5em 0.5em 0.2em rgb(48, 39, 39);
-}
-
-.carousel__back-button:active, .carousel__next-button:active {
-  transform: scale(0.8);
-}
-
-
-
-@media screen and (max-width: 960px) {
+@media (min-width: 961px) {
   .SummaryContainer {
-    grid-column-start: 1;
+    grid-column-start: 4;
     grid-column-end: 9;
+    border: 1px solid black;
+    border-radius: 10px;
+    height: 350px;
+    width: 100%;
+    position: relative;
+    background: #3C3230;
+    color: #eeebd9;
+  }
+  
+  .carousel__next-button {
+    border-radius: 10px;
+    position: absolute;
+    right: -20px;
+    top: 50%;
+    height: 2em;
+    background: #3C824E;
+  }
+  
+  .carousel__back-button {
+    border-radius: 10px;
+    position: absolute;
+    left: -20px;
+    top: 50%;
+    height: 2em;
+    background: #3C824E;
+  }
+  
+  .carousel__back-button:hover, .carousel__next-button:hover {
+    transition: 0.5s;
+    transform: scale(1.3);
+    background: #3C824E;
+    box-shadow: 0.5em 0.5em 0.2em rgb(48, 39, 39);
+  }
+  
+  .carousel__back-button:active, .carousel__next-button:active {
+    transform: scale(0.8);
   }
   
 }
+
+@media (min-width: 481px) and (max-width: 960px) {
+  .sideNav {
+    width: 200px;
+  }
+  .SummaryContainer {
+    grid-column-start: 1;
+    grid-column-end: 9;
+    border: 1px solid black;
+    border-radius: 10px;
+    height: 350px;
+    width: 100%;
+    position: relative;
+    background: #3C3230;
+    color: #eeebd9;
+  }
+  
+  .carousel__next-button {
+    border-radius: 10px;
+    position: absolute;
+    right: -20px;
+    top: 50%;
+    height: 2em;
+    background: #3C824E;
+  }
+  
+  .carousel__back-button {
+    border-radius: 10px;
+    position: absolute;
+    left: -20px;
+    top: 50%;
+    height: 2em;
+    background: #3C824E;
+  }
+  
+  .carousel__back-button:hover, .carousel__next-button:hover {
+    transition: 0.5s;
+    transform: scale(1.3);
+    background: #3C824E;
+    box-shadow: 0.5em 0.5em 0.2em rgb(48, 39, 39);
+  }
+  
+  .carousel__back-button:active, .carousel__next-button:active {
+    transform: scale(0.8);
+  }
+
+}
+
+@media (min-width: 320px) and (max-width: 480px) {
+  .SummaryContainer {
+    grid-column-start: 2;
+    grid-column-end: 8;
+    border: 1px solid black;
+    border-radius: 10px;
+    height: 350px;
+    width: 100%;
+    position: relative;
+    background: #3C3230;
+    color: #eeebd9;
+  }
+
+  .carousel__next-button {
+    border-radius: 10px;
+    position: absolute;
+    right: -20px;
+    top: 50%;
+    height: 2em;
+    background: #3C824E;
+  }
+  
+  .carousel__back-button {
+    border-radius: 10px;
+    position: absolute;
+    left: -20px;
+    top: 50%;
+    height: 2em;
+    background: #3C824E;
+  }
+  
+  .carousel__back-button:hover, .carousel__next-button:hover {
+    transition: 0.5s;
+    transform: scale(1.3);
+    background: #3C824E;
+    box-shadow: 0.5em 0.5em 0.2em rgb(48, 39, 39);
+  }
+  
+  .carousel__back-button:active, .carousel__next-button:active {
+    transform: scale(0.8);
+  }
+}
+
+
+
+
+
