--- a/src/components/SavedEventsSummary/SavedEventsSummary.css
+++ b/src/components/SavedEventsSummary/SavedEventsSummary.css
@@ -1,6 +1,6 @@
 .saved-event-list {
     position: relative;
-    grid-column-start: 3;
+    grid-column-start: 4;
     grid-column-end: 9;
     height: 100%;
     max-height: 450px;
@@ -13,10 +13,9 @@
     overflow-y: auto;
 }
 
-.saved-event-controls {
-    width: 50%;
-    margin-left: 50%;
-    margin-top: 0.5em; 
+.savedEventFilterControls { 
+    width: 90%;
+    text-align: right;
 }
 
 @media screen and (max-width: 960px) {
