--- a/src/routes/FindContactsRoute/FindContacts.css
+++ b/src/routes/FindContactsRoute/FindContacts.css
@@ -1,9 +1,26 @@
+
 @media screen and (min-width: 960px) {
   .contacts-search-results {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
     grid-gap: 1em;
 }
+
+.findContactsRouteImage {
+  position: relative;
+  grid-column-start: 1;
+  grid-column-end: 9;
+}
+
+.findContactsRouteImage > img {
+  height: 320px;
+  width: 320px;
+  position: absolute;
+  top: -50px;
+  left: 10%;
+  z-index: -1;
+}
+
 
   .results-container {
     position: relative;
@@ -46,6 +63,22 @@
       grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
       grid-gap: 1em;
   }
+
+  .findContactsRouteImage {
+    position: relative;
+    grid-column-start: 1;
+    grid-column-end: 9;
+  }
+  
+  .findContactsRouteImage > img {
+    height: 250px;
+    width: 250px;
+    position: absolute;
+    top: -50px;
+    left: 10%;
+    z-index: -1;
+  }
+  
   
   .results-container {
       position: relative;
