--- a/src/routes/SavedEventsRoute/SavedEventsRoute.css
+++ b/src/routes/SavedEventsRoute/SavedEventsRoute.css
@@ -3,3 +3,18 @@
   grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
   grid-gap: 1em;
 }
+
+.savedEventsBack {
+  position: relative;
+  grid-column-start: 1;
+  grid-column-end: 9;
+}
+
+.savedEventsBack > img {
+  height: 250px;
+  width: 250px;
+  position: absolute;
+  top: -200px;
+  right: 5%;
+  z-index: -1;
+}
