--- a/src/components/FindProfessionalsForm/FindProfessionalForm.css
+++ b/src/components/FindProfessionalsForm/FindProfessionalForm.css
@@ -16,3 +16,18 @@
 .option {
   color: black;
 }
+
+.findProfessionalsBackgroundImage {
+  position: relative;
+  grid-column-start: 1;
+  grid-column-end: 9;
+}
+
+.findProfessionalsBackgroundImage > img {
+  height: 250px;
+  width: 250px;
+  position: absolute;
+  top: -100px;
+  left: 5%;
+  z-index: -1;
+}
