--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -14,6 +14,9 @@
     text-decoration: none;
     cursor: pointer;
   }
+  a:hover {
+    cursor: pointer;
+  }
   
   .header {
     grid-column-start: 1;
