--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -4,18 +4,21 @@
   display: grid;
   grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
   grid-gap: 16px;
-  height: 75px;
+  height: 100%;
 }
 
 .team-info {
   grid-column-start: 2;
-  grid-column-end: 4;
+  grid-column-end: 6;
   margin: auto;
+  width: 100%;
+  height: 100%;
+  
 }
 
 .links-to-tech {
-  grid-column-start: 11;
-  grid-column-end: 13;
+  grid-column-start: 9;
+  grid-column-end: 12;
   margin: auto;
 }
 
