--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -13,13 +13,33 @@
   margin: auto;
   width: 100%;
   height: 100%;
-  
+  line-height: 168%;
+  justify-content: space-evenly;
 }
 
 .links-to-tech {
   grid-column-start: 9;
   grid-column-end: 12;
   margin: auto;
+  line-height: 168%;
+}
+
+@media screen and (max-width: 700px) {
+  .footer {
+    grid-template-columns: 2.3fr 1fr;
+    height: 100px;
+  }
+
+  .team-info {
+    grid-column-start: 1;
+    grid-column-end: 2;
+    justify-content: space-evenly;
+  }
+
+  .links-to-tech {
+    grid-column-start: 2;
+    grid-column-end: 3;
+  }
 }
 
 
