--- a/src/components/ResourceCard/ResourceCard.css
+++ b/src/components/ResourceCard/ResourceCard.css
@@ -9,6 +9,7 @@
   background: #3b3a50;
   color: #eeebd9;
   box-shadow:  0.5em 0.5em 0.2em rgb(48, 39, 39);
+  margin-bottom: 0.5em;
 }
 
 #type-Input {
